@@ -1,5 +1,5 @@
 /*
- * "$Id: dirsvc.c,v 1.73.2.34 2003/07/19 22:13:53 mike Exp $"
+ * "$Id: dirsvc.c,v 1.73.2.35 2003/07/20 12:51:46 mike Exp $"
  *
  *   Directory services routines for the Common UNIX Printing System (CUPS).
  *
@@ -1409,7 +1409,7 @@ UpdatePolling(void)
     * Copy over the buffer data we've used up...
     */
 
-    strcpy(buffer, lineptr);
+    cups_strcpy(buffer, lineptr);
     bufused -= lineptr - buffer;
 
     if (bufused < 0)
@@ -1708,7 +1708,7 @@ GetSlpAttrVal(const char *attrlist,	/* I - Attribute list string */
 
 	for (ptr1 = valbuf; *ptr1; ptr1 ++)
 	  if (*ptr1 == '\\' && ptr1[1])
-	    strcpy(ptr1, ptr1 + 1);
+	    cups_strcpy(ptr1, ptr1 + 1);
 
         return (0);
       }
@@ -1942,5 +1942,5 @@ UpdateSLPBrowse(void)
 
 
 /*
- * End of "$Id: dirsvc.c,v 1.73.2.34 2003/07/19 22:13:53 mike Exp $".
+ * End of "$Id: dirsvc.c,v 1.73.2.35 2003/07/20 12:51:46 mike Exp $".
  */
