@@ -1,5 +1,5 @@
 /*
- * "$Id: printers.c,v 1.93.2.49 2003/04/26 17:19:47 mike Exp $"
+ * "$Id: printers.c,v 1.93.2.50 2003/07/20 12:51:54 mike Exp $"
  *
  *   Printer routines for the Common UNIX Printing System (CUPS).
  *
@@ -501,7 +501,7 @@ DeletePrinterFilters(printer_t *p)	/* I - Printer to remove from */
       MimeDatabase->num_filters --;
 
       if (i > 1)
-        memcpy(filter, filter + 1, sizeof(mime_filter_t) * (i - 1));
+        memmove(filter, filter + 1, sizeof(mime_filter_t) * (i - 1));
 
       filter --;
     }
@@ -2389,5 +2389,5 @@ write_irix_state(printer_t *p)		/* I - Printer to update */
 
 
 /*
- * End of "$Id: printers.c,v 1.93.2.49 2003/04/26 17:19:47 mike Exp $".
+ * End of "$Id: printers.c,v 1.93.2.50 2003/07/20 12:51:54 mike Exp $".
  */
