@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.20rc1
 
+	- Added support for live testing with Valgrind (STR
+	  #193)
 	- The CGI programs now collect the list of needed
 	  attributes for the class, job, and printer template
 	  files (STR #192)
